RESOLVED FIXED238783
Fix the CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER build
https://bugs.webkit.org/show_bug.cgi?id=238783
Summary Fix the CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER build
Simon Fraser (smfr)
Reported 2022-04-04 19:03:28 PDT
Fix the CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER build
Attachments
Patch (1.70 KB, patch)
2022-04-04 19:04 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-04-04 19:04:14 PDT
EWS
Comment 2 2022-04-04 19:43:57 PDT
Committed r292366 (249231@main): <https://commits.webkit.org/249231@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456660 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-04 19:44:16 PDT
Note You need to log in before you can comment on or make changes to this bug.