Fix the CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER build https://bugs.webkit.org/show_bug.cgi?id=238783

Unreviewed build fix.

ConcreteImageBuffer<>::create() needs a default CreationContext argument.


* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::ensureFrontBuffer):

Canonical link: https://commits.webkit.org/249231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292366 268f45cc-cd09-0410-ab3c-d52691b4dbfc